--- a/index.html
+++ b/index.html
@@ -6,29 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 </head>
-
 <body>
 <div class="container">
     <h1 class="h1">Номера и цены</h1>
-    <div class="room_box">
-
-        <div class="room_card" >
-            <div class="room-card-photo">
+    <div class="box">
+        <div class="card">
+            <div class="card__image">
                 <img class="img" src="img/room1.jpg">
             </div>
-
-            <div class="room-card-content">
-                <h3 class="h3">Представительский люкс</h3>
-                Эксклюзивный номер с панорамным видом на центр города Москвы
-                <hr class="hr">
-                <div class="room-price">
-                    От <span>7900</span> руб./сутки
+            <div class="card__content">
+                <div class="card__desc">
+                    <h3 class="card__title">Представительский люкс</h3>
+                    <div class="card__text">Эксклюзивный номер с панорамным видом на центр города Москвы</div>
                 </div>
-                <input type="button" class="room_order_btn" value="Забронировать">
+                <hr class="hr">
+                <div class="book">
+                    <div class="book__price">
+                        От <span>7900</span> руб./сутки
+                    </div>
+                    <input type="button" class="link -type-booking" value="Забронировать">
+                </div>
             </div>
         </div>
-
-
         <div class="room_card">
             <div class="room-card-photo">
                 <img class="img" src="img/room2.jpg">
@@ -43,7 +42,6 @@
                 <input type="button" class="room_order_btn" value="Забронировать">
             </div>
         </div>
-
         <div class="room_card">
             <div class="room-card-photo">
                 <img class="img" src="img/room3.jpg">
@@ -54,13 +52,11 @@
                 <hr class="hr">
                 <div class="room-price">
                     От <span class="price">4900</span> руб./сутки
-                    <input type="button" class="room_order_btn" value="Забронировать">
                 </div>
+                <input type="button" class="room_order_btn" value="Забронировать">
             </div>
         </div>
-
     </div>
 </div>
 </body>
-
 </html>
