правки по верстке

--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <html>
-
 <head>
     <link href="styles/styles.css" rel="stylesheet">
-    <script src="js/main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 </head>
 <body>
 <div class="container">
     <h1 class="h1">Номера и цены</h1>
-    <div class="box">
-        <div class="card">
-            <div class="card__image">
+    <div class="room_box">
+        <div class="room_card">
+            <div class="room-card-photo">
                 <img class="img" src="img/room1.jpg">
             </div>
-            <div class="card__content">
-                <div class="card__desc">
-                    <h3 class="card__title">Представительский люкс</h3>
-                    <div class="card__text">Эксклюзивный номер с панорамным видом на центр города Москвы</div>
-                </div>
+            <div class="room-card-content">
+                <h2 class="h2">Представительский люкс</h2>
+                <div class="text">Эксклюзивный номер с панорамным видом на центр города Москвы</div>
                 <hr class="hr">
-                <div class="book">
-                    <div class="book__price">
-                        От <span>7900</span> руб./сутки
-                    </div>
-                    <input type="button" class="link -type-booking" value="Забронировать">
+                <div class="room-price">
+                    От <span>7900</span> руб./сутки
                 </div>
+                <a class="room_order_btn" href="#">
+                    <span>Забронировать</span>
+                </a>
             </div>
         </div>
         <div class="room_card">
@@ -33,8 +29,8 @@
                 <img class="img" src="img/room2.jpg">
             </div>
             <div class="room-card-content">
-                <h3 class="h3">Дуплекс</h3>
-                Просторный двухкомнатный номер с шикарным видом на парк
+                <h2 class="h2">Дуплекс</h2>
+                <div class="text">Просторный двухкомнатный номер с шикарным видом на парк</div>
                 <hr class="hr">
                 <div class="room-price">
                     От <span class="price">5700</span> руб./сутки
@@ -47,8 +43,8 @@
                 <img class="img" src="img/room3.jpg">
             </div>
             <div class="room-card-content">
-                <h3 class="h3">Бизнес-люкс</h3>
-                Трехкомнатный номер с панорамным видом на Москва-реку
+                <h2 class="h2">Бизнес-люкс</h2>
+                <div class="text">Трехкомнатный номер с панорамным видом на Москва-реку</div>
                 <hr class="hr">
                 <div class="room-price">
                     От <span class="price">4900</span> руб./сутки
@@ -58,5 +54,6 @@
         </div>
     </div>
 </div>
+<script src="js/main.js"></script>
 </body>
 </html>
