правки по макету

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="text">Эксклюзивный номер с панорамным видом на центр города Москвы</div>
                 <hr class="hr">
                 <div class="room-price">
-                    От <span>7900</span> руб./сутки
+                    от <span>7900</span> руб./сутки
                 </div>
                 <a class="room_order_btn" href="#">
                     <span>Забронировать</span>
@@ -33,7 +33,7 @@
                 <div class="text">Просторный двухкомнатный номер с шикарным видом на парк</div>
                 <hr class="hr">
                 <div class="room-price">
-                    От <span class="price">5700</span> руб./сутки
+                    от <span class="price">5700</span> руб./сутки
                 </div>
                 <input type="button" class="room_order_btn" value="Забронировать">
             </div>
@@ -47,7 +47,7 @@
                 <div class="text">Трехкомнатный номер с панорамным видом на Москва-реку</div>
                 <hr class="hr">
                 <div class="room-price">
-                    От <span class="price">4900</span> руб./сутки
+                    от <span class="price">4900</span> руб./сутки
                 </div>
                 <input type="button" class="room_order_btn" value="Забронировать">
             </div>
