--- a/index.html
+++ b/index.html
@@ -1,55 +1,72 @@
 <html>
 <head>
     <link href="styles/styles.css" rel="stylesheet">
+    <link href="styles/normalize.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 </head>
 <body>
 <div class="container">
     <h1 class="h1">Номера и цены</h1>
-    <div class="room_box">
-        <div class="room_card">
-            <div class="room-card-photo">
-                <img class="img" src="img/room1.jpg">
+    <div class="box">
+        <div class="card">
+            <div class="card__image">
+                <picture class="picture">
+                    <img class="img" src="img/room1.jpg">
+                </picture>
             </div>
-            <div class="room-card-content">
-                <h2 class="h2">Представительский люкс</h2>
-                <div class="text">Эксклюзивный номер с панорамным видом на центр города Москвы</div>
+            <div class="card__content">
+                <h2 class="card__title">Представительский люкс</h2>
+                <div class="card__text">Эксклюзивный номер с панорамным видом на центр города Москвы</div>
                 <hr class="hr">
-                <div class="room-price">
-                    от <span>7900</span> руб./сутки
+                <div class="order">
+                    <div class="order__price">
+                        от <span>7900</span> руб./сутки
+                    </div>
+                    <a class="button" href="#">
+                        <span>Забронировать</span>
+                    </a>
                 </div>
-                <a class="room_order_btn" href="#">
-                    <span>Забронировать</span>
-                </a>
             </div>
         </div>
-        <div class="room_card">
-            <div class="room-card-photo">
-                <img class="img" src="img/room2.jpg">
+        <div class="card">
+            <div class="card__image">
+                <picture class="picture">
+                    <img class="img" src="img/room2.jpg">
+                </picture>
             </div>
-            <div class="room-card-content">
-                <h2 class="h2">Дуплекс</h2>
-                <div class="text">Просторный двухкомнатный номер с шикарным видом на парк</div>
+            <div class="card__content">
+                <h2 class="card__title">Дуплекс</h2>
+                <div class="card__text">Просторный двухкомнатный номер с шикарным видом на парк</div>
                 <hr class="hr">
-                <div class="room-price">
-                    от <span class="price">5700</span> руб./сутки
+                <div class="order">
+                    <div class="order__price">
+                        от <span class="price">5700</span> руб./сутки
+                    </div>
+                    <a class="button" href="#">
+                        <span>Забронировать</span>
+                    </a>
                 </div>
-                <input type="button" class="room_order_btn" value="Забронировать">
             </div>
         </div>
-        <div class="room_card">
-            <div class="room-card-photo">
-                <img class="img" src="img/room3.jpg">
+        <div class="card">
+            <div class="card__image">
+                <picture class="picture">
+                    <img class="img" src="img/room3.jpg">
+                </picture>
             </div>
-            <div class="room-card-content">
-                <h2 class="h2">Бизнес-люкс</h2>
-                <div class="text">Трехкомнатный номер с панорамным видом на Москва-реку</div>
+            <div class="card__content">
+                <h2 class="card__title">Бизнес-люкс</h2>
+                <div class="card__text">Трехкомнатный номер с панорамным видом на Москва-реку</div>
                 <hr class="hr">
-                <div class="room-price">
-                    от <span class="price">4900</span> руб./сутки
+                <div class="order">
+                    <div class="order__price">
+                        от <span class="price">4900</span> руб./сутки
+                    </div>
+                    <a class="button" href="#">
+                        <span>Забронировать</span>
+                    </a>
                 </div>
-                <input type="button" class="room_order_btn" value="Забронировать">
             </div>
         </div>
     </div>
