--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                         от <span>7900</span> руб./сутки
                     </div>
                     <a class="button" href="#">
-                        <span>Забронировать</span>
+                        <span class="button__text">Забронировать</span>
+                        <span class="button__text -hide">Подробнее</span>
                     </a>
                 </div>
             </div>
