--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                         от <span class="price">5700</span> руб./сутки
                     </div>
                     <a class="button" href="#">
-                        <span>Забронировать</span>
+                        <span class="button__text">Забронировать</span>
+                        <span class="button__text -hide">Подробнее</span>
                     </a>
                 </div>
             </div>
@@ -65,7 +66,8 @@
                         от <span class="price">4900</span> руб./сутки
                     </div>
                     <a class="button" href="#">
-                        <span>Забронировать</span>
+                        <span class="button__text">Забронировать</span>
+                        <span class="button__text -hide">Подробнее</span>
                     </a>
                 </div>
             </div>
